[package]
name = "clipt"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.41", features = ["rt-multi-thread", "macros", "signal"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
zbus = { version = "4.1", default-features = false, features = ["tokio"] }
futures-util = { version = "0.3", default-features = false }
