[package]
name = "klipper-timeout"
version = "0.1.1"
edition = "2024"
license-file = "LICENSE"


[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.48", features = ["rt-multi-thread", "macros", "signal"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
zbus = { version = "5.12", default-features = false, features = ["tokio"] }
futures-util = { version = "0.3", default-features = false }
regex = "1.12"
